--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Personal-Memoirs-of-P.-H.-Sheridan-Volume-I.-Part-3_5856
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Sheridan, Philip Henry
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/988
     wikipedia: http://en.wikipedia.org/wiki/Philip_Sheridan
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5856#Personal-Memoirs-of-P.-H.-Sheridan-Volume-I.-Part-3
 gutenberg_bookshelf: US Civil War
 gutenberg_issued: '2004-06-01'
 gutenberg_type: Text
